base-sem/base-a3/y.output
Grammar

    0 $accept: Program $end

    1 Program: DeclP

    2 DeclP: DeclP Decl
    3      | Decl

    4 Decl: VarDecl
    5     | FnDecl
    6     | ClassDecl
    7     | InterfaceDecl

    8 VarDecl: Var ';'
    9        | Var error ';'

   10 Var: Type T_Identifier

   11 Type: T_Int
   12     | T_Double
   13     | T_Bool
   14     | T_String
   15     | T_Identifier
   16     | Type T_Dims

   17 FnDecl: Type T_Identifier '(' Formals ')' StmtBlock
   18       | Type T_Identifier '(' error ')' StmtBlock
   19       | T_Void T_Identifier '(' Formals ')' StmtBlock
   20       | T_Void T_Identifier '(' error ')' StmtBlock

   21 VarPC: VarPC ',' Var
   22      | Var

   23 Formals: VarPC
   24        | /* empty */

   25 IdentifierPC: IdentifierPC ',' T_Identifier
   26             | T_Identifier

   27 ExtendsO: T_Extends T_Identifier
   28         | /* empty */

   29 ImplementsO: T_Implements IdentifierPC
   30            | /* empty */

   31 FieldS: FieldS Field
   32       | /* empty */

   33 ClassDecl: T_Class T_Identifier ExtendsO ImplementsO '{' FieldS '}'

   34 Field: VarDecl
   35      | FnDecl

   36 PrototypeS: PrototypeS Prototype
   37           | /* empty */

   38 InterfaceDecl: T_Interface T_Identifier '{' PrototypeS '}'

   39 Prototype: Type T_Identifier '(' Formals ')' ';'
   40          | Type T_Identifier '(' error ')' ';'
   41          | T_Void T_Identifier '(' Formals ')' ';'
   42          | T_Void T_Identifier '(' error ')' ';'

   43 StmtP: StmtP Stmt
   44      | Stmt

   45 VarDeclP: VarDeclP VarDecl
   46         | VarDecl

   47 StmtBlock: '{' VarDeclP StmtP '}'
   48          | '{' VarDeclP '}'
   49          | '{' StmtP '}'
   50          | '{' '}'

   51 ExprO: Expr
   52      | /* empty */

   53 Stmt: ExprO ';'
   54     | Expr error ';'
   55     | IfStmt
   56     | WhileStmt
   57     | ForStmt
   58     | BreakStmt
   59     | ReturnStmt
   60     | PrintStmt
   61     | SwitchStmt
   62     | StmtBlock

   63 ElseO: T_Else Stmt
   64      | /* empty */

   65 IfStmt: T_If '(' Expr ')' Stmt ElseO
   66       | T_If '(' error ')' Stmt ElseO

   67 WhileStmt: T_While '(' Expr ')' Stmt

   68 ForStmt: T_For '(' ExprO ';' Expr ';' ExprO ')' Stmt

   69 ReturnStmt: T_Return ExprO ';'

   70 BreakStmt: T_Break ';'

   71 ExprPC: ExprPC ',' Expr
   72       | Expr

   73 PrintStmt: T_Print '(' ExprPC ')' ';'

   74 StmtS: StmtS Stmt
   75      | /* empty */

   76 Case: T_Case T_IntConstant ':' StmtS

   77 CaseP: CaseP Case
   78      | Case

   79 Default: T_Default ':' StmtS

   80 DefaultO: Default
   81         | /* empty */

   82 SwitchStmt: T_Switch '(' Expr ')' '{' CaseP DefaultO '}'

   83 Expr: LValue '=' Expr
   84     | Constant
   85     | LValue
   86     | T_This
   87     | Call
   88     | '(' Expr ')'
   89     | Expr '+' Expr
   90     | Expr '-' Expr
   91     | Expr '*' Expr
   92     | Expr '/' Expr
   93     | Expr '%' Expr
   94     | '-' Expr
   95     | Expr '<' Expr
   96     | Expr T_LessEqual Expr
   97     | Expr '>' Expr
   98     | Expr T_GreaterEqual Expr
   99     | Expr T_Equal Expr
  100     | Expr T_NotEqual Expr
  101     | Expr T_And Expr
  102     | Expr T_Or Expr
  103     | '!' Expr
  104     | T_ReadInteger '(' ')'
  105     | T_ReadLine '(' ')'
  106     | T_New T_Identifier
  107     | T_NewArray '(' Expr ',' Type ')'
  108     | Expr T_Increment
  109     | Expr T_Decrement

  110 LValue: T_Identifier
  111       | Expr '.' T_Identifier
  112       | Expr '[' Expr ']'

  113 Call: T_Identifier '(' Actuals ')'
  114     | T_Identifier '(' error ')'
  115     | Expr '.' T_Identifier '(' Actuals ')'
  116     | Expr '.' T_Identifier '(' error ')'

  117 Actuals: ExprPC
  118        | /* empty */

  119 Constant: T_IntConstant
  120         | T_DoubleConstant
  121         | T_BoolConstant
  122         | T_StringConstant
  123         | T_Null


Terminals, with rules where they appear

$end (0) 0
'!' (33) 103
'%' (37) 93
'(' (40) 17 18 19 20 39 40 41 42 65 66 67 68 73 82 88 104 105 107 113
    114 115 116
')' (41) 17 18 19 20 39 40 41 42 65 66 67 68 73 82 88 104 105 107 113
    114 115 116
'*' (42) 91
'+' (43) 89
',' (44) 21 25 71 107
'-' (45) 90 94
'.' (46) 111 115 116
'/' (47) 92
':' (58) 76 79
';' (59) 8 9 39 40 41 42 53 54 68 69 70 73
'<' (60) 95
'=' (61) 83
'>' (62) 97
'[' (91) 112
']' (93) 112
'{' (123) 33 38 47 48 49 50 82
'}' (125) 33 38 47 48 49 50 82
error (256) 9 18 20 40 42 54 66 114 116
T_Void (258) 19 20 41 42
T_Bool (259) 13
T_Int (260) 11
T_Double (261) 12
T_String (262) 14
T_Class (263) 33
T_LessEqual (264) 96
T_GreaterEqual (265) 98
T_Equal (266) 99
T_NotEqual (267) 100
T_Dims (268) 16
T_And (269) 101
T_Or (270) 102
T_Null (271) 123
T_Extends (272) 27
T_This (273) 86
T_Interface (274) 38
T_Implements (275) 29
T_While (276) 67
T_For (277) 68
T_If (278) 65 66
T_Else (279) 63
T_Return (280) 69
T_Break (281) 70
T_New (282) 106
T_NewArray (283) 107
T_Print (284) 73
T_ReadInteger (285) 104
T_ReadLine (286) 105
T_Increment (287) 108
T_Decrement (288) 109
T_Switch (289) 82
T_Case (290) 76
T_Default (291) 79
T_Identifier (292) 10 15 17 18 19 20 25 26 27 33 38 39 40 41 42 106
    110 111 113 114 115 116
T_StringConstant (293) 122
T_IntConstant (294) 76 119
T_DoubleConstant (295) 120
T_BoolConstant (296) 121
NoElse (297)


Nonterminals, with rules where they appear

$accept (62)
    on left: 0
Program (63)
    on left: 1, on right: 0
DeclP (64)
    on left: 2 3, on right: 1 2
Decl (65)
    on left: 4 5 6 7, on right: 2 3
VarDecl (66)
    on left: 8 9, on right: 4 34 45 46
Var (67)
    on left: 10, on right: 8 9 21 22
Type (68)
    on left: 11 12 13 14 15 16, on right: 10 16 17 18 39 40 107
FnDecl (69)
    on left: 17 18 19 20, on right: 5 35
VarPC (70)
    on left: 21 22, on right: 21 23
Formals (71)
    on left: 23 24, on right: 17 19 39 41
IdentifierPC (72)
    on left: 25 26, on right: 25 29
ExtendsO (73)
    on left: 27 28, on right: 33
ImplementsO (74)
    on left: 29 30, on right: 33
FieldS (75)
    on left: 31 32, on right: 31 33
ClassDecl (76)
    on left: 33, on right: 6
Field (77)
    on left: 34 35, on right: 31
PrototypeS (78)
    on left: 36 37, on right: 36 38
InterfaceDecl (79)
    on left: 38, on right: 7
Prototype (80)
    on left: 39 40 41 42, on right: 36
StmtP (81)
    on left: 43 44, on right: 43 47 49
VarDeclP (82)
    on left: 45 46, on right: 45 47 48
StmtBlock (83)
    on left: 47 48 49 50, on right: 17 18 19 20 62
ExprO (84)
    on left: 51 52, on right: 53 68 69
Stmt (85)
    on left: 53 54 55 56 57 58 59 60 61 62, on right: 43 44 63 65 66
    67 68 74
ElseO (86)
    on left: 63 64, on right: 65 66
IfStmt (87)
    on left: 65 66, on right: 55
WhileStmt (88)
    on left: 67, on right: 56
ForStmt (89)
    on left: 68, on right: 57
ReturnStmt (90)
    on left: 69, on right: 59
BreakStmt (91)
    on left: 70, on right: 58
ExprPC (92)
    on left: 71 72, on right: 71 73 117
PrintStmt (93)
    on left: 73, on right: 60
StmtS (94)
    on left: 74 75, on right: 74 76 79
Case (95)
    on left: 76, on right: 77 78
CaseP (96)
    on left: 77 78, on right: 77 82
Default (97)
    on left: 79, on right: 80
DefaultO (98)
    on left: 80 81, on right: 82
SwitchStmt (99)
    on left: 82, on right: 61
Expr (100)
    on left: 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100
    101 102 103 104 105 106 107 108 109, on right: 51 54 65 67 68 71
    72 82 83 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 107
    108 109 111 112 115 116
LValue (101)
    on left: 110 111 112, on right: 83 85
Call (102)
    on left: 113 114 115 116, on right: 87
Actuals (103)
    on left: 117 118, on right: 113 115
Constant (104)
    on left: 119 120 121 122 123, on right: 84


state 0

    0 $accept: . Program $end

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    Program        go to state 9
    DeclP          go to state 10
    Decl           go to state 11
    VarDecl        go to state 12
    Var            go to state 13
    Type           go to state 14
    FnDecl         go to state 15
    ClassDecl      go to state 16
    InterfaceDecl  go to state 17


state 1

   19 FnDecl: T_Void . T_Identifier '(' Formals ')' StmtBlock
   20       | T_Void . T_Identifier '(' error ')' StmtBlock

    T_Identifier  shift, and go to state 18


state 2

   13 Type: T_Bool .

    $default  reduce using rule 13 (Type)


state 3

   11 Type: T_Int .

    $default  reduce using rule 11 (Type)


state 4

   12 Type: T_Double .

    $default  reduce using rule 12 (Type)


state 5

   14 Type: T_String .

    $default  reduce using rule 14 (Type)


state 6

   33 ClassDecl: T_Class . T_Identifier ExtendsO ImplementsO '{' FieldS '}'

    T_Identifier  shift, and go to state 19


state 7

   38 InterfaceDecl: T_Interface . T_Identifier '{' PrototypeS '}'

    T_Identifier  shift, and go to state 20


state 8

   15 Type: T_Identifier .

    $default  reduce using rule 15 (Type)


state 9

    0 $accept: Program . $end

    $end  shift, and go to state 21


state 10

    1 Program: DeclP .
    2 DeclP: DeclP . Decl

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 1 (Program)

    Decl           go to state 22
    VarDecl        go to state 12
    Var            go to state 13
    Type           go to state 14
    FnDecl         go to state 15
    ClassDecl      go to state 16
    InterfaceDecl  go to state 17


state 11

    3 DeclP: Decl .

    $default  reduce using rule 3 (DeclP)


state 12

    4 Decl: VarDecl .

    $default  reduce using rule 4 (Decl)


state 13

    8 VarDecl: Var . ';'
    9        | Var . error ';'

    error  shift, and go to state 23
    ';'    shift, and go to state 24


state 14

   10 Var: Type . T_Identifier
   16 Type: Type . T_Dims
   17 FnDecl: Type . T_Identifier '(' Formals ')' StmtBlock
   18       | Type . T_Identifier '(' error ')' StmtBlock

    T_Dims        shift, and go to state 25
    T_Identifier  shift, and go to state 26


state 15

    5 Decl: FnDecl .

    $default  reduce using rule 5 (Decl)


state 16

    6 Decl: ClassDecl .

    $default  reduce using rule 6 (Decl)


state 17

    7 Decl: InterfaceDecl .

    $default  reduce using rule 7 (Decl)


state 18

   19 FnDecl: T_Void T_Identifier . '(' Formals ')' StmtBlock
   20       | T_Void T_Identifier . '(' error ')' StmtBlock

    '('  shift, and go to state 27


state 19

   33 ClassDecl: T_Class T_Identifier . ExtendsO ImplementsO '{' FieldS '}'

    T_Extends  shift, and go to state 28

    $default  reduce using rule 28 (ExtendsO)

    ExtendsO  go to state 29


state 20

   38 InterfaceDecl: T_Interface T_Identifier . '{' PrototypeS '}'

    '{'  shift, and go to state 30


state 21

    0 $accept: Program $end .

    $default  accept


state 22

    2 DeclP: DeclP Decl .

    $default  reduce using rule 2 (DeclP)


state 23

    9 VarDecl: Var error . ';'

    ';'  shift, and go to state 31


state 24

    8 VarDecl: Var ';' .

    $default  reduce using rule 8 (VarDecl)


state 25

   16 Type: Type T_Dims .

    $default  reduce using rule 16 (Type)


state 26

   10 Var: Type T_Identifier .
   17 FnDecl: Type T_Identifier . '(' Formals ')' StmtBlock
   18       | Type T_Identifier . '(' error ')' StmtBlock

    '('  shift, and go to state 32

    $default  reduce using rule 10 (Var)


state 27

   19 FnDecl: T_Void T_Identifier '(' . Formals ')' StmtBlock
   20       | T_Void T_Identifier '(' . error ')' StmtBlock

    error         shift, and go to state 33
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    ')'  reduce using rule 24 (Formals)

    Var      go to state 34
    Type     go to state 35
    VarPC    go to state 36
    Formals  go to state 37


state 28

   27 ExtendsO: T_Extends . T_Identifier

    T_Identifier  shift, and go to state 38


state 29

   33 ClassDecl: T_Class T_Identifier ExtendsO . ImplementsO '{' FieldS '}'

    T_Implements  shift, and go to state 39

    $default  reduce using rule 30 (ImplementsO)

    ImplementsO  go to state 40


state 30

   38 InterfaceDecl: T_Interface T_Identifier '{' . PrototypeS '}'

    $default  reduce using rule 37 (PrototypeS)

    PrototypeS  go to state 41


state 31

    9 VarDecl: Var error ';' .

    $default  reduce using rule 9 (VarDecl)


state 32

   17 FnDecl: Type T_Identifier '(' . Formals ')' StmtBlock
   18       | Type T_Identifier '(' . error ')' StmtBlock

    error         shift, and go to state 42
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    ')'  reduce using rule 24 (Formals)

    Var      go to state 34
    Type     go to state 35
    VarPC    go to state 36
    Formals  go to state 43


state 33

   20 FnDecl: T_Void T_Identifier '(' error . ')' StmtBlock

    ')'  shift, and go to state 44


state 34

   22 VarPC: Var .

    $default  reduce using rule 22 (VarPC)


state 35

   10 Var: Type . T_Identifier
   16 Type: Type . T_Dims

    T_Dims        shift, and go to state 25
    T_Identifier  shift, and go to state 45


state 36

   21 VarPC: VarPC . ',' Var
   23 Formals: VarPC .

    ','  shift, and go to state 46

    $default  reduce using rule 23 (Formals)


state 37

   19 FnDecl: T_Void T_Identifier '(' Formals . ')' StmtBlock

    ')'  shift, and go to state 47


state 38

   27 ExtendsO: T_Extends T_Identifier .

    $default  reduce using rule 27 (ExtendsO)


state 39

   29 ImplementsO: T_Implements . IdentifierPC

    T_Identifier  shift, and go to state 48

    IdentifierPC  go to state 49


state 40

   33 ClassDecl: T_Class T_Identifier ExtendsO ImplementsO . '{' FieldS '}'

    '{'  shift, and go to state 50


state 41

   36 PrototypeS: PrototypeS . Prototype
   38 InterfaceDecl: T_Interface T_Identifier '{' PrototypeS . '}'

    T_Void        shift, and go to state 51
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 52

    Type       go to state 53
    Prototype  go to state 54


state 42

   18 FnDecl: Type T_Identifier '(' error . ')' StmtBlock

    ')'  shift, and go to state 55


state 43

   17 FnDecl: Type T_Identifier '(' Formals . ')' StmtBlock

    ')'  shift, and go to state 56


state 44

   20 FnDecl: T_Void T_Identifier '(' error ')' . StmtBlock

    '{'  shift, and go to state 57

    StmtBlock  go to state 58


state 45

   10 Var: Type T_Identifier .

    $default  reduce using rule 10 (Var)


state 46

   21 VarPC: VarPC ',' . Var

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    Var   go to state 59
    Type  go to state 35


state 47

   19 FnDecl: T_Void T_Identifier '(' Formals ')' . StmtBlock

    '{'  shift, and go to state 57

    StmtBlock  go to state 60


state 48

   26 IdentifierPC: T_Identifier .

    $default  reduce using rule 26 (IdentifierPC)


state 49

   25 IdentifierPC: IdentifierPC . ',' T_Identifier
   29 ImplementsO: T_Implements IdentifierPC .

    ','  shift, and go to state 61

    $default  reduce using rule 29 (ImplementsO)


state 50

   33 ClassDecl: T_Class T_Identifier ExtendsO ImplementsO '{' . FieldS '}'

    $default  reduce using rule 32 (FieldS)

    FieldS  go to state 62


state 51

   41 Prototype: T_Void . T_Identifier '(' Formals ')' ';'
   42          | T_Void . T_Identifier '(' error ')' ';'

    T_Identifier  shift, and go to state 63


state 52

   38 InterfaceDecl: T_Interface T_Identifier '{' PrototypeS '}' .

    $default  reduce using rule 38 (InterfaceDecl)


state 53

   16 Type: Type . T_Dims
   39 Prototype: Type . T_Identifier '(' Formals ')' ';'
   40          | Type . T_Identifier '(' error ')' ';'

    T_Dims        shift, and go to state 25
    T_Identifier  shift, and go to state 64


state 54

   36 PrototypeS: PrototypeS Prototype .

    $default  reduce using rule 36 (PrototypeS)


state 55

   18 FnDecl: Type T_Identifier '(' error ')' . StmtBlock

    '{'  shift, and go to state 57

    StmtBlock  go to state 65


state 56

   17 FnDecl: Type T_Identifier '(' Formals ')' . StmtBlock

    '{'  shift, and go to state 57

    StmtBlock  go to state 66


state 57

   47 StmtBlock: '{' . VarDeclP StmtP '}'
   48          | '{' . VarDeclP '}'
   49          | '{' . StmtP '}'
   50          | '{' . '}'

    T_Bool            shift, and go to state 2
    T_Int             shift, and go to state 3
    T_Double          shift, and go to state 4
    T_String          shift, and go to state 5
    T_Null            shift, and go to state 67
    T_This            shift, and go to state 68
    T_While           shift, and go to state 69
    T_For             shift, and go to state 70
    T_If              shift, and go to state 71
    T_Return          shift, and go to state 72
    T_Break           shift, and go to state 73
    T_New             shift, and go to state 74
    T_NewArray        shift, and go to state 75
    T_Print           shift, and go to state 76
    T_ReadInteger     shift, and go to state 77
    T_ReadLine        shift, and go to state 78
    T_Switch          shift, and go to state 79
    T_Identifier      shift, and go to state 80
    T_StringConstant  shift, and go to state 81
    T_IntConstant     shift, and go to state 82
    T_DoubleConstant  shift, and go to state 83
    T_BoolConstant    shift, and go to state 84
    '-'               shift, and go to state 85
    '!'               shift, and go to state 86
    '('               shift, and go to state 87
    '{'               shift, and go to state 57
    '}'               shift, and go to state 88

    $default  reduce using rule 52 (ExprO)

    VarDecl     go to state 89
    Var         go to state 13
    Type        go to state 35
    StmtP       go to state 90
    VarDeclP    go to state 91
    StmtBlock   go to state 92
    ExprO       go to state 93
    Stmt        go to state 94
    IfStmt      go to state 95
    WhileStmt   go to state 96
    ForStmt     go to state 97
    ReturnStmt  go to state 98
    BreakStmt   go to state 99
    PrintStmt   go to state 100
    SwitchStmt  go to state 101
    Expr        go to state 102
    LValue      go to state 103
    Call        go to state 104
    Constant    go to state 105


state 58

   20 FnDecl: T_Void T_Identifier '(' error ')' StmtBlock .

    $default  reduce using rule 20 (FnDecl)


state 59

   21 VarPC: VarPC ',' Var .

    $default  reduce using rule 21 (VarPC)


state 60

   19 FnDecl: T_Void T_Identifier '(' Formals ')' StmtBlock .

    $default  reduce using rule 19 (FnDecl)


state 61

   25 IdentifierPC: IdentifierPC ',' . T_Identifier

    T_Identifier  shift, and go to state 106


state 62

   31 FieldS: FieldS . Field
   33 ClassDecl: T_Class T_Identifier ExtendsO ImplementsO '{' FieldS . '}'

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 107

    VarDecl  go to state 108
    Var      go to state 13
    Type     go to state 14
    FnDecl   go to state 109
    Field    go to state 110


state 63

   41 Prototype: T_Void T_Identifier . '(' Formals ')' ';'
   42          | T_Void T_Identifier . '(' error ')' ';'

    '('  shift, and go to state 111


state 64

   39 Prototype: Type T_Identifier . '(' Formals ')' ';'
   40          | Type T_Identifier . '(' error ')' ';'

    '('  shift, and go to state 112


state 65

   18 FnDecl: Type T_Identifier '(' error ')' StmtBlock .

    $default  reduce using rule 18 (FnDecl)


state 66

   17 FnDecl: Type T_Identifier '(' Formals ')' StmtBlock .

    $default  reduce using rule 17 (FnDecl)


state 67

  123 Constant: T_Null .

    $default  reduce using rule 123 (Constant)


state 68

   86 Expr: T_This .

    $default  reduce using rule 86 (Expr)


state 69

   67 WhileStmt: T_While . '(' Expr ')' Stmt

    '('  shift, and go to state 113


state 70

   68 ForStmt: T_For . '(' ExprO ';' Expr ';' ExprO ')' Stmt

    '('  shift, and go to state 114


state 71

   65 IfStmt: T_If . '(' Expr ')' Stmt ElseO
   66       | T_If . '(' error ')' Stmt ElseO

    '('  shift, and go to state 115


state 72

   69 ReturnStmt: T_Return . ExprO ';'

    T_Null            shift, and go to state 67
    T_This            shift, and go to state 68
    T_New             shift, and go to state 74
    T_NewArray        shift, and go to state 75
    T_ReadInteger     shift, and go to state 77
    T_ReadLine        shift, and go to state 78
    T_Identifier      shift, and go to state 116
    T_StringConstant  shift, and go to state 81
    T_IntConstant     shift, and go to state 82
    T_DoubleConstant  shift, and go to state 83
    T_BoolConstant    shift, and go to state 84
    '-'               shift, and go to state 85
    '!'               shift, and go to state 86
    '('               shift, and go to state 87

    $default  reduce using rule 52 (ExprO)

    ExprO     go to state 117
    Expr      go to state 118
    LValue    go to state 103
    Call      go to state 104
    Constant  go to state 105


state 73

   70 BreakStmt: T_Break . ';'

    ';'  shift, and go to state 119


state 74

  106 Expr: T_New . T_Identifier

    T_Identifier  shift, and go to state 120


state 75

  107 Expr: T_NewArray . '(' Expr ',' Type ')'

    '('  shift, and go to state 121


state 76

   73 PrintStmt: T_Print . '(' ExprPC ')' ';'

    '('  shift, and go to state 122


state 77

  104 Expr: T_ReadInteger . '(' ')'

    '('  shift, and go to state 123


state 78

  105 Expr: T_ReadLine . '(' ')'

    '('  shift, and go to state 124


state 79

   82 SwitchStmt: T_Switch . '(' Expr ')' '{' CaseP DefaultO '}'

    '('  shift, and go to state 125


state 80

   15 Type: T_Identifier .
  110 LValue: T_Identifier .
  113 Call: T_Identifier . '(' Actuals ')'
  114     | T_Identifier . '(' error ')'

    '('  shift, and go to state 126

    T_Dims        reduce using rule 15 (Type)
    T_Identifier  reduce using rule 15 (Type)
    $default      reduce using rule 110 (LValue)


state 81

  122 Constant: T_StringConstant .

    $default  reduce using rule 122 (Constant)


state 82

  119 Constant: T_IntConstant .

    $default  reduce using rule 119 (Constant)


state 83

  120 Constant: T_DoubleConstant .

    $default  reduce using rule 120 (Constant)


state 84

  121 Constant: T_BoolConstant .

    $default  reduce using rule 121 (Constant)


state 85

   94 Expr: '-' . Expr

    T_Null            shift, and go to state 67
    T_This            shift, and go to state 68
    T_New             shift, and go to state 74
    T_NewArray        shift, and go to state 75
    T_ReadInteger     shift, and go to state 77
    T_ReadLine        shift, and go to state 78
    T_Identifier      shift, and go to state 116
    T_StringConstant  shift, and go to state 81
    T_IntConstant     shift, and go to state 82
    T_DoubleConstant  shift, and go to state 83
    T_BoolConstant    shift, and go to state 84
    '-'               shift, and go to state 85
    '!'               shift, and go to state 86
    '('               shift, and go to state 87

    Expr      go to state 127
    LValue    go to state 103
    Call      go to state 104
    Constant  go to state 105


state 86

  103 Expr: '!' . Expr

    T_Null            shift, and go to state 67
    T_This            shift, and go to state 68
    T_New             shift, and go to state 74
    T_NewArray        shift, and go to state 75
    T_ReadInteger     shift, and go to state 77
    T_ReadLine        shift, and go to state 78
    T_Identifier      shift, and go to state 116
    T_StringConstant  shift, and go to state 81
    T_IntConstant     shift, and go to state 82
    T_DoubleConstant  shift, and go to state 83
    T_BoolConstant    shift, and go to state 84
    '-'               shift, and go to state 85
    '!'               shift, and go to state 86
    '('               shift, and go to state 87

    Expr      go to state 128
    LValue    go to state 103
    Call      go to state 104
    Constant  go to state 105


state 87

   88 Expr: '(' . Expr ')'

    T_Null            shift, and go to state 67
    T_This            shift, and go to state 68
    T_New             shift, and go to state 74
    T_NewArray        shift, and go to state 75
    T_ReadInteger     shift, and go to state 77
    T_ReadLine        shift, and go to state 78
    T_Identifier      shift, and go to state 116
    T_StringConstant  shift, and go to state 81
    T_IntConstant     shift, and go to state 82
    T_DoubleConstant  shift, and go to state 83
    T_BoolConstant    shift, and go to state 84
    '-'               shift, and go to state 85
    '!'               shift, and go to state 86
    '('               shift, and go to state 87

    Expr      go to state 129
    LValue    go to state 103
    Call      go to state 104
    Constant  go to state 105


state 88

   50 StmtBlock: '{' '}' .

    $default  reduce using rule 50 (StmtBlock)


state 89

   46 VarDeclP: VarDecl .

    $default  reduce using rule 46 (VarDeclP)


state 90

   43 StmtP: StmtP . Stmt
   49 StmtBlock: '{' StmtP . '}'

    T_Null            shift, and go to state 67
    T_This            shift, and go to state 68
    T_While           shift, and go to state 69
    T_For             shift, and go to state 70
    T_If              shift, and go to state 71
    T_Return          shift, and go to state 72
    T_Break           shift, and go to state 73
    T_New             shift, and go to state 74
    T_NewArray        shift, and go to state 75
    T_Print           shift, and go to state 76
    T_ReadInteger     shift, and go to state 77
    T_ReadLine        shift, and go to state 78
    T_Switch          shift, and go to state 79
    T_Identifier      shift, and go to state 116
    T_StringConstant  shift, and go to state 81
    T_IntConstant     shift, and go to state 82
    T_DoubleConstant  shift, and go to state 83
    T_BoolConstant    shift, and go to state 84
    '-'               shift, and go to state 85
    '!'               shift, and go to state 86
    '('               shift, and go to state 87
    '{'               shift, and go to state 57
    '}'               shift, and go to state 130

    $default  reduce using rule 52 (ExprO)

    StmtBlock   go to state 92
    ExprO       go to state 93
    Stmt        go to state 131
    IfStmt      go to state 95
    WhileStmt   go to state 96
    ForStmt     go to state 97
    ReturnStmt  go to state 98
    BreakStmt   go to state 99
    PrintStmt   go to state 100
    SwitchStmt  go to state 101
    Expr        go to state 102
    LValue      go to state 103
    Call        go to state 104
    Constant    go to state 105


state 91

   45 VarDeclP: VarDeclP . VarDecl
   47 StmtBlock: '{' VarDeclP . StmtP '}'
   48          | '{' VarDeclP . '}'

    T_Bool            shift, and go to state 2
    T_Int             shift, and go to state 3
    T_Double          shift, and go to state 4
    T_String          shift, and go to state 5
    T_Null            shift, and go to state 67
    T_This            shift, and go to state 68
    T_While           shift, and go to state 69
    T_For             shift, and go to state 70
    T_If              shift, and go to state 71
    T_Return          shift, and go to state 72
    T_Break           shift, and go to state 73
    T_New             shift, and go to state 74
    T_NewArray        shift, and go to state 75
    T_Print           shift, and go to state 76
    T_ReadInteger     shift, and go to state 77
    T_ReadLine        shift, and go to state 78
    T_Switch          shift, and go to state 79
    T_Identifier      shift, and go to state 80
    T_StringConstant  shift, and go to state 81
    T_IntConstant     shift, and go to state 82
    T_DoubleConstant  shift, and go to state 83
    T_BoolConstant    shift, and go to state 84
    '-'               shift, and go to state 85
    '!'               shift, and go to state 86
    '('               shift, and go to state 87
    '{'               shift, and go to state 57
    '}'               shift, and go to state 132

    $default  reduce using rule 52 (ExprO)

    VarDecl     go to state 133
    Var         go to state 13
    Type        go to state 35
    StmtP       go to state 134
    StmtBlock   go to state 92
    ExprO       go to state 93
    Stmt        go to state 94
    IfStmt      go to state 95
    WhileStmt   go to state 96
    ForStmt     go to state 97
    ReturnStmt  go to state 98
    BreakStmt   go to state 99
    PrintStmt   go to state 100
    SwitchStmt  go to state 101
    Expr        go to state 102
    LValue      go to state 103
    Call        go to state 104
    Constant    go to state 105


state 92

   62 Stmt: StmtBlock .

    $default  reduce using rule 62 (Stmt)


state 93

   53 Stmt: ExprO . ';'

    ';'  shift, and go to state 135


state 94

   44 StmtP: Stmt .

    $default  reduce using rule 44 (StmtP)


state 95

   55 Stmt: IfStmt .

    $default  reduce using rule 55 (Stmt)


state 96

   56 Stmt: WhileStmt .

    $default  reduce using rule 56 (Stmt)


state 97

   57 Stmt: ForStmt .

    $default  reduce using rule 57 (Stmt)


state 98

   59 Stmt: ReturnStmt .

    $default  reduce using rule 59 (Stmt)


state 99

   58 Stmt: BreakStmt .

    $default  reduce using rule 58 (Stmt)


state 100

   60 Stmt: PrintStmt .

    $default  reduce using rule 60 (Stmt)


state 101

   61 Stmt: SwitchStmt .

    $default  reduce using rule 61 (Stmt)


state 102

   51 ExprO: Expr .
   54 Stmt: Expr . error ';'
   89 Expr: Expr . '+' Expr
   90     | Expr . '-' Expr
   91     | Expr . '*' Expr
   92     | Expr . '/' Expr
   93     | Expr . '%' Expr
   95     | Expr . '<' Expr
   96     | Expr . T_LessEqual Expr
   97     | Expr . '>' Expr
   98     | Expr . T_GreaterEqual Expr
   99     | Expr . T_Equal Expr
  100     | Expr . T_NotEqual Expr
  101     | Expr . T_And Expr
  102     | Expr . T_Or Expr
  108     | Expr . T_Increment
  109     | Expr . T_Decrement
  111 LValue: Expr . '.' T_Identifier
  112       | Expr . '[' Expr ']'
  115 Call: Expr . '.' T_Identifier '(' Actuals ')'
  116     | Expr . '.' T_Identifier '(' error ')'

    error           shift, and go to state 136
    T_LessEqual     shift, and go to state 137
    T_GreaterEqual  shift, and go to state 138
    T_Equal         shift, and go to state 139
    T_NotEqual      shift, and go to state 140
    T_And           shift, and go to state 141
    T_Or            shift, and go to state 142
    T_Increment     shift, and go to state 143
    T_Decrement     shift, and go to state 144
    '<'             shift, and go to state 145
    '>'             shift, and go to state 146
    '-'             shift, and go to state 147
    '+'             shift, and go to state 148
    '/'             shift, and go to state 149
    '%'             shift, and go to state 150
    '*'             shift, and go to state 151
    '.'             shift, and go to state 152
    '['             shift, and go to state 153

    ';'  reduce using rule 51 (ExprO)


state 103

   83 Expr: LValue . '=' Expr
   85     | LValue .

    '='  shift, and go to state 154

    $default  reduce using rule 85 (Expr)


state 104

   87 Expr: Call .
